about page complete and blog fixed

--- a/about.html
+++ b/about.html
@@ -8,13 +8,111 @@
 </head>
 <body>
 
-<header class="filter_header">
-    <div class="LOGO">
-        <a href="circuit.html">
-            <img src="Assets/Website-GLB/BigCreteLOGO.bmp" alt="big crete crane logo" width="50%" height="auto">
-        </a>
+<div class="LOGO">
+    <a href="circuit.html">
+        <img src="Assets/Website-GLB/BigCreteLOGO.bmp" alt="big crete crane logo" width="50%" height="auto">
+    </a>
+</div>
+
+<main>
+    <div class="about-blurb">
+        <div class="about-sidebar">
+            <img src="Assets/Images/About/Headshot.png" class="dp">
+
+            <h2 class="sidebar">Skills</h2>
+            <hr class="small-hr">
+            <div class="skills">
+                <h6 class="skill-level">CAPABLE</h6><h6 class="skill-level">SKILLED</h6><h6 class="skill-level">ADVANCED</h6><h6 class="skill-level">EXPERT</h6>
+                <img src="Assets/Images/About/Expert.png" style="width: 100%;">
+                <h5 class="skill-name">FPGA Design</h5>
+                <img src="Assets/Images/About/Expert.png" style="width: 100%;">
+                <h5 class="skill-name">Prototyping / R&D</h5>
+                <img src="Assets/Images/About/Expert.png" style="width: 100%;">
+                <h5 class="skill-name">PCB Design</h5>
+                <img src="Assets/Images/About/Advanced.png" style="width: 100%;">
+                <h5 class="skill-name">Digital ASIC Design</h5>
+                <img src="Assets/Images/About/Advanced.png" style="width: 100%;">
+                <h5 class="skill-name">CAD / Mechanical     Design</h5>
+                <img src="Assets/Images/About/Skilled.png" style="width: 100%;">
+                <h5 class="skill-name">Analog IC Design</h5>
+                <img src="Assets/Images/About/Skilled.png" style="width: 100%;">
+                <h5 class="skill-name">Firmware</h5>
+                <img src="Assets/Images/About/Capable.png" style="width: 100%;">
+                <h5 class="skill-name">Web Dev</h5>
+            </div>
+
+            <h2 class="sidebar">Experience</h2>
+            <hr class="small-hr">
+            <div class="job">
+                <h3 class="company-name"><a href="https://neuralink.com/" target="_blank">Neuralink</a></h3>
+                <h6 class="job-title">ASIC Design Intern</h6>
+                <h6 class="job-date">Sept 2022 - Dec 2022</h6>
+                <p class="job-description">Neuralink is developing the future of BCIs pushing them to the mainstream. I took ownership on 2 main projects Emulation and AMS with some digital design on the side. For Emulation I built a system to allow us to emulate the upcoming S1 chip on an FPGA providing verificaiton for the digital design including core along with the tooling the firmware team needed to iterate quickly prior to tapeout. For AMS I built out the tooling and testbenches on both the digital and analog side required to validate S1. In addition to this I did RTL design for portions of the S1 digital design. </p>
+            </div>
+            <div class="job">
+                <h3 class="company-name"><a href="https://tesla.com/" target="_blank">Tesla</a></h3>
+                <h6 class="job-title">Hardware Design Intern</h6>
+                <h6 class="job-date">May 2021 - Aug 2021</h6>
+                <p class="job-description"> TODO </p>
+            </div>
+            <div class="job">
+                <h3 class="company-name"><a href="https://nvidia.com/" target="_blank">Nvidia</a></h3>
+                <h6 class="job-title">ASIC Design Intern</h6>
+                <h6 class="job-date">May 2020 - Present</h6>
+                <p class="job-description"> TODO  <a href="https://www.youtube.com/watch?v=KUXX4vl6qAA&ab_channel=Gastronomous" target="_blank">demo of our prototype</a>.</p>
+            </div>
+            <div class="job">
+                <h3 class="company-name"><a href="https://www.canadensys.ca/" target="_blank">Canadensys</a></h3>
+                <h6 class="job-title">Hardware Engineering Intern</h6>
+                <h6 class="job-date">Sept 2019 - Present</h6>
+                <p class="job-description">TODO</p>
+            </div>
+            <div class="job">
+                <h3 class="company-name"><a href="https://rocketlabusa.com/" target="_blank">Rocketlab</a></h3>
+                <h6 class="job-title">Summer Intern</h6>
+                <h6 class="job-date">Jan 2020 - Apr 2020</h6>
+                <p class="job-description">TODO</p>
+            </div>
+            <div class="job">
+                <h3 class="company-name"><a href="https://team1325.com/" target="_blank">Gastronomous</a></h3>
+                <h6 class="job-title">Mechatronics Engineer</h6>
+                <h6 class="job-date">Oct 2015 - Mar 2020</h6>
+                <p class="job-description">TODO</p>
+            </div>
+            <div class="job">
+                <h3 class="company-name"><a href="https://team1325.com/" target="_blank">Mag-Z</a></h3>
+                <h6 class="job-title">Mechatronics Engineer</h6>
+                <h6 class="job-date">Oct 2015 - Mar 2020</h6>
+                <p class="job-description">TODO</p>
+            </div>
+            <div class="job">
+                <h3 class="company-name"><a href="https://1360.ca/" target="_blank">1360 Orbit Robotics</a></h3>
+                <h6 class="job-title">Design & Software Lead</h6>
+                <h6 class="job-date">Oct 2015 - Mar 2020</h6>
+                <p class="job-description">TODO</p>
+            </div>
+
+            <hr class="mobile-about-line">
+        </div>
+        <div class="about-text">
+            <p class="text-box">My name is Ethan Childerhose,</p>
+            <p class="text-box">I am a 3rd year Mechatronics Engineering student at the University of Waterloo. I have a vast set of interests across engineering disciplines and like to keep myself busy. I just wrapped up my coop term at <a href="https://neuralink.com/">Neuralink</a> as an ASIC Design intern, working on a next generation chip for a future generation brain implant. Some topics that interest me deeply are chip design, electrical engineering, control theory, materials, and physics.</p>
+            <div class="text-box">
+                <img src="Assets/Images/About/Moores.png" class="right-picture forty-per"> PUT A PHOTO OF CHIP ME
+                <p>I love to learn both in the class and outside of it. I work on a variety of projects and this website acts as a place for me to show them off. For complete projects you can visit my <a href="main.html">projects</a> page and for projects I'm working go to the <a href="construction.html">construction site</a>. I am currently working on exploring the world of chip design a common theme is my fascination with the miniature the amount of engineering squeezed into the small space of many chips inspires me.</p>
+            </div>
+            <div class="text-box">
+<!--                <img src="../assets/Clay Working.JPG" class="left-picture">-->
+                <p>I love to work on things from first principles learning and developing the skills to build things myself. I find a deep appreciation in learning how the world around me works and using this knowledge to create cool things. I love fast paced environments where engineering is core to the work being done.</p>
+            </div>
+            <div class="image-box">
+                <img src="Assets/Images/About/Hiking.jpg" style="width:80%; height: auto;" class="center-picture">
+            </div>
+            <p class="text-box">Aside from engineering and projects, I love to get out and explore the world. I love to travel and see the outdoors, I try to seek out new experiences and do things outside of my comfort zone. As for sports I do right now I love hiking, skiing, swimming, and longboarding.</p>
+            <p class="text-box">If you want to know more about me I suggest you check out my <a href="blog.html">blog</a>, if you would like to chat feel free to add me on linkedin or send me an email, I'm always happy to chat.</p>
+        </div>
     </div>
-</header>
+</main>
 
 
 </body>
