filled in the todo section of the about page

--- a/about.html
+++ b/about.html
@@ -52,44 +52,44 @@
             <div class="job">
                 <h3 class="company-name"><a href="https://tesla.com/" target="_blank">Tesla</a></h3>
                 <h6 class="job-title">Hardware Design Intern</h6>
-                <h6 class="job-date">May 2021 - Aug 2021</h6>
-                <p class="job-description"> TODO </p>
+                <h6 class="job-date">Jan 2022 - Apr 2022</h6>
+                <p class="job-description">At Tesla I was working on the body controls team which is responsible for PCBs which control a number of endpoints around the vehicle. During my time there I took on a mixture of developing boards for use in future vehicles, debugging problems as they arose on the fleet, and bringing up new boards.</p>
             </div>
             <div class="job">
                 <h3 class="company-name"><a href="https://nvidia.com/" target="_blank">Nvidia</a></h3>
                 <h6 class="job-title">ASIC Design Intern</h6>
-                <h6 class="job-date">May 2020 - Present</h6>
-                <p class="job-description"> TODO  <a href="https://www.youtube.com/watch?v=KUXX4vl6qAA&ab_channel=Gastronomous" target="_blank">demo of our prototype</a>.</p>
+                <h6 class="job-date">May 2021 - Aug 2021</h6>
+                <p class="job-description">At Nvidia I worked on the memory subsystem for 3 seperate SOCs, Tegra Orin, Grace CPU, and one yet to be released SKU. I worked to modify clock gating and re-group signals to reduce power consumption and area.</p>
             </div>
             <div class="job">
                 <h3 class="company-name"><a href="https://www.canadensys.ca/" target="_blank">Canadensys</a></h3>
                 <h6 class="job-title">Hardware Engineering Intern</h6>
-                <h6 class="job-date">Sept 2019 - Present</h6>
-                <p class="job-description">TODO</p>
+                <h6 class="job-date">Sept 2022 - Dec 2022 & Jan 2022 - Apr 2022</h6>
+                <p class="job-description">Across my 8 months at Canadensys I worked on a wide array of projects. Initially I worked on their first set of NISA lunar cameras developing tooling required to speed up assembly and also documentation for how to assemble them. I designed and built vibration plates, clean room equipment, firmware loading automation, a custom ICT to validate the electronics, and personally assembled the first set sold to customers some of which are now on orbit. During my final 4 months I switched from NISA to working on their satellite avionic computers where I developed FPGA programs helped to bring up the first batch and develop similar assembly procedures.</p>
             </div>
             <div class="job">
                 <h3 class="company-name"><a href="https://rocketlabusa.com/" target="_blank">Rocketlab</a></h3>
                 <h6 class="job-title">Summer Intern</h6>
-                <h6 class="job-date">Jan 2020 - Apr 2020</h6>
-                <p class="job-description">TODO</p>
+                <h6 class="job-date">July 2019 - Aug 2019</h6>
+                <p class="job-description">At rocket lab (formerly Sinclair Interplanetary) I helped to do thermal testing on prototype flyback buck boost convertor circuits for use in future products. I also helped to write python which automated ESD testing on reaction wheels. </p>
             </div>
             <div class="job">
                 <h3 class="company-name"><a href="https://team1325.com/" target="_blank">Gastronomous</a></h3>
                 <h6 class="job-title">Mechatronics Engineer</h6>
-                <h6 class="job-date">Oct 2015 - Mar 2020</h6>
-                <p class="job-description">TODO</p>
+                <h6 class="job-date">Apr 2020 - Feb 2021</h6>
+                <p class="job-description">At Gastronomous I worked to develop renders and concepts for future automated kitchen designs and developed initial hardware designs for future products. <a href="https://www.youtube.com/watch?v=KUXX4vl6qAA&ab_channel=Gastronomous" target="_blank">demo of Gastros prototype</a>.</p>
             </div>
             <div class="job">
                 <h3 class="company-name"><a href="https://team1325.com/" target="_blank">Mag-Z</a></h3>
                 <h6 class="job-title">Mechatronics Engineer</h6>
-                <h6 class="job-date">Oct 2015 - Mar 2020</h6>
-                <p class="job-description">TODO</p>
+                <h6 class="job-date">Mar 2019 - Nov 2019</h6>
+                <p class="job-description">MAG-Z is a cinematography company using robotic arms to get new types of shots not previously available with traditional cinema technology. While there I worked to develop a motorized follow focus system from scratch using a brushless motor and rapidly prototyped mechanical enclosure controlled through a custom GUI built in Qt. </p>
             </div>
             <div class="job">
                 <h3 class="company-name"><a href="https://1360.ca/" target="_blank">1360 Orbit Robotics</a></h3>
                 <h6 class="job-title">Design & Software Lead</h6>
-                <h6 class="job-date">Oct 2015 - Mar 2020</h6>
-                <p class="job-description">TODO</p>
+                <h6 class="job-date">Oct 2016 - Mar 2019</h6>
+                <p class="job-description">1360 Orbit Robotics is a community FRC team during my time there I was a team lead helping to teach kids programming and mechanical design while also developing competitive robots that took the team to their first worlds competition ranking as high as first in the district of Ontario.</p>
             </div>
 
             <hr class="mobile-about-line">
