got obsidian working sorta (obsidian needs some work)

--- a/quartz-hugo/content/construction.html
+++ b/quartz-hugo/content/construction.html
@@ -46,7 +46,7 @@ maybe its a building and the windows are the project links
 
 <img src="Assets/Website-GLB/Construction%20Site.bmp" alt="Big Crete Construction Site">
 <div class="construction-links">
-    <a class="big-chip"   href="notes/obsidian">Big Crete Big Chip</a>
+    <a class="big-chip"   href="Big_Crete_Calculator_Notes/High-Level-Scope">Big Crete Big Chip</a>
     <a class="calculator" href="./ConstructionPages/calculator.html">Big Crete Calculator</a>
     <a class="raytracer"  href="./ConstructionPages/ray-tracer.html">Big Crete Raytracer</a>
     <a class="bracket"    href="./ConstructionPages/bracket-bot.html">Bracket Bot</a>
