--- a/content/main.html
+++ b/content/main.html
@@ -5,7 +5,6 @@
     <title>Big Crete Engineering</title>
     <meta name="description" content="Big Crete Engineering is dedicated to the bleeding edge of electronics and design, we live and die on the crete">
     <link rel="stylesheet" type="text/css" href="Stylesheets/mainPage.css">
-    <script src="Scripts/modal.js"></script>
 </head>
 <body>
     <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
@@ -26,104 +25,102 @@
         </a>
     </div>
 
+    <section class="section">
+        <h1>BIG CRETE CALCULATOR</h1>
+        <p class="description">
+            Launchable robot designed to compete in a robotics competiton
+        </p>
+    </section>
+
+    <section class="section">
+        <h1>THROW BOT</h1>
+        <p class="description">
+            Launchable robot designed to compete in a robotics competiton
+        </p>
+    </section>
+
+    <!-- PHOTOS, need edit -->
+    <section class="section">
+        <h1>FPGA POWER SUPPLY</h1>
+        <p class="description">
+            Power delivery circuit for LPDDR3 and Atrix 7 Xilinx FPGA
+        </p>
+    </section>
+
+    <section class="section">
+        <h1>BRACKET BOT</h1>
+        <p class="description">
+            Autonomous inverted pendulum robotic test platform
+        </p>
+    </section>
+
+    <!-- PHOTOS, need edit -->
     <section class="section" >
-        <h1>BC PONG <button id="btn1">More Info</button></h1>
+        <h1>FPGA PONG</h1>
         <p class="description">
             FPGA development board with built-in LED matrix display
         </p>
     </section>
 
-    <!-- The Modal -->
-    <div id="modal1" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h1>Big Crete FPGA Development Board</h1>
-            <br>
-            <ul>
-                <li>10Mhz Clock Speed</li>
-                <li>4-Layer stackup</li>
-                <li>Powered and programmed over USB</li>
-                <li>SPI Flash for FPGA configuration</li>
-                <li>10x15 LED Display</li>
-            </ul>
-            <br>
-            <p>The Big Crete FPGA board is built around a low cost iCE40HX1K which requires a minimal amount of parts to operate.
-                The other two major ICs on this board is the USB to UART chip from FTDI which allows the FPGA to be flashed over USB
-                along with a voltage convertor IC which generates the required 3.3V and 1.2V rails from the supplied 5V.
-                This board was programmed to run a simple game of pong fully implemented in digital logic.
-                The full board has a BOM cost of roughly $100 CAD.</p>
-        </div>
-    </div>
-
+    <!-- PHOTOS, need edit -->
     <section class="section">
-        <h1>BC CLOCK <button class="b2" id="btn2">More Info</button></h1>
+        <h1>LIXIE CLOCK </h1>
         <p class="description">
             Lixie tube clock with brass capacitive touch interface
         </p>
     </section>
 
-    <!-- The Modal -->
-    <div id="modal2" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h1>The Big Crete Photonic Display System</h1>
-            <br>
-            <ul>
-                <li>80 RGB LEDs</li>
-                <li>Laser Cut Construction</li>
-                <li>4 Laser cut edge lit acrylic Lixie tubes</li>
-                <li>Brass capacitive touch interface</li>
-                <li>USB-C connection</li>
-                <li>Realtime clock module with battery backup</li>
-                <li>Powered by Arduino</li>
-            </ul>
-            <br>
-            <p>The Big Crete Photonic Display System is a modern take on an old design with some extra big crete twists.
-                The first Lixie tube has 2 numbers with the following panes being emojis which have varying functions from a settings menu to a sleep mode which partially shuts the panes off.
-                The primary funciton of the Big Crete Photonic Display System is to display time and track the amount of days since preset dates.
-                This allows a user to track metrics such as snapchat streaks or days left in the year or week easily at a glance. <br>
-                The brass capacitive touch buttons give a clean interface that won't wear down over time.
-                The lixie panes are designed to be easily swapped should the user want to change the font or icons used. The 80 RGB LEDs are WS2812B parts with 20 LEDs per Lixie bulb.
-                The USB-C power interface gives a modern standard that is reversible and capable of keeping up with the power the BCR-140239 demands.</p>
-        </div>
-    </div>
-
-    <section class="section">
-        <h1>BC PCS <button class="b3" id="btn3">More Info</button></h1>
+    <!-- PHOTOS, need edit -->
+    <h1>BIG CRETE CUBE </h1>
         <p class="description">
-            FPGA development board with built-in LED matrix display
+            Manually machined clone of popular 3d print
         </p>
     </section>
 
-    <!-- The Modal -->
-    <div id="modal3" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h1>Big Crete FPGA Development Board</h1>
-            <br>
-            <ul>
-                <li>10Mhz Clock Speed</li>
-                <li>4-Layer stackup</li>
-                <li>Powered and programmed over USB</li>
-                <li>SPI Flash for FPGA configuration</li>
-                <li>10x15 LED Display</li>
-            </ul>
-            <br>
-            <p>The Big Crete FPGA board is built around a low cost iCE40HX1K which requires a minimal amount of parts to operate.
-                The other two major ICs on this board is the USB to UART chip from FTDI which allows the FPGA to be flashed over USB
-                along with a voltage convertor IC which generates the required 3.3V and 1.2V rails from the supplied 5V.
-                This board was programmed to run a simple game of pong fully implemented in digital logic.
-                The full board has a BOM cost of roughly $100 CAD.</p>
-        </div>
-    </div>
+
+    <section class="section">
+        <h1>Robotic Follow Focus</h1>
+        <p class="description">
+            Follow focus for cinema grade lenses
+        </p>
+    </section>
+
+    <section class="section">
+        <h1>fold3r</h1>
+        <p class="description">
+            Automated origami creasing robot
+        </p>
+    </section>
+
+    <section class="section">
+        <h1>Autonoprint</h1>
+        <p class="description">
+            Hackathon automated 3D printer mod
+        </p>
+    </section>
+
+    <section class="section">
+        <h1>A salter</h1>
+        <p class="description">
+            Hackathon robot for breaking up ice and applying salt to sidewalks
+        </p>
+    </section>
+
+    <section class="section">
+        <h1>Rebolt</h1>
+        <p class="description">
+            Hackathon robot which automatically sorts bolts by size
+        </p>
+    </section>
+
+    <section class="section">
+        <h1>FRC Drivetrain</h1>
+        <p class="description">
+            Mechanical Design of FRC drivetrain
+        </p>
+    </section>
 
     <canvas class="webgl"></canvas>
-
-
-
 
     <script type="module" src="Scripts/externalObject.js"></script>
 </body>
