fixed a lot of bugs and fixed backlinks

--- a/content/blog.html
+++ b/content/blog.html
@@ -56,14 +56,14 @@
             </a>
         </div>
 
-        <div class="filters">
+        <!-- <div class="filters">
             <ul>
                 <li><a data-filter=".all" href="#">All</a></li>
                 <li><a data-filter=".eng" href="#">Engineering</a></li>
                 <li><a data-filter=".life" href="#">Crete Speaks</a></li>
                 <li><a data-filter=".misc" href="#">Edge</a></li>
             </ul>
-        </div>
+        </div> -->
     </header>
 
     <div class="spacer"></div>
