--- a/content/construction.html
+++ b/content/construction.html
@@ -46,10 +46,10 @@ maybe its a building and the windows are the project links
 
 <img src="Assets/Website-GLB/ConstructionSite.bmp" alt="Big Crete Construction Site">
 <div class="construction-links">
-    <a class="calculator" href="BigCreteCalculator/High-Level-Scope">Big Crete Calculator</a>
-    <a class="big-chip"   href="BigCreteBigChip/index">Big Crete Big Chip</a>
-    <a class="raytracer"  href="BigCreteRayTracer/index">Big Crete Raytracer</a>
-    <a class="bracket"    href="BracketBot/index">Bracket Bot</a>
+    <a class="calculator" href="ConstructionSite/BigCreteCalculator/High-Level-Scope">Big Crete Calculator</a>
+    <a class="big-chip"   href="ConstructionSite/BigCreteBigChip/index">Big Crete Big Chip</a>
+    <a class="raytracer"  href="ConstructionSite/BigCreteRayTracer/index">Big Crete Raytracer</a>
+    <a class="bracket"    href="ConstructionSite/BracketBot/index">Bracket Bot</a>
 </div>
 
 </body>
