--- a/content/about.html
+++ b/content/about.html
@@ -18,9 +18,9 @@
     <main>
         <div style="margin-top: 16px;" class="team-members">
             <img class="team-member" src="Assets/headshots/clayton.png">
-            <img class="team-member" src="./assets/headshots/ethan.png">
-            <img class="team-member" src="./assets/headshots/brian.png">
-            <img class="team-member" src="./assets/headshots/alex.png">
+            <img class="team-member" src="Assets/headshots/ethan.png">
+            <img class="team-member" src="Assets/headshots/brian.png">
+            <img class="team-member" src="Assets/headshots/alex.png">
         </div>
         <p>Nice to meet you &#128522, our team has a wide background in engineering, please feel free to reach out with any questions.</p>
         <a class="link" href="mailto:info@bigcrete.engineering">Send an Email</a>
