Quartz sync: Dec 5, 2023, 5:50 PM

--- a/content/about.html
+++ b/content/about.html
@@ -21,6 +21,7 @@
             <img class="team-member" src="Assets/headshots/ethan.png">
             <img class="team-member" src="Assets/headshots/brian.png">
             <img class="team-member" src="Assets/headshots/alex.png">
+            <img class="team-member" src="Assets/headshots/ivan.png">
         </div>
         <p>Nice to meet you &#128522, our team has a wide background in engineering, please feel free to reach out with any questions.</p>
         <a class="link" href="mailto:info@bigcrete.engineering">Send an Email</a>
