Quartz sync: Dec 5, 2023, 7:15 PM

--- a/content/blog.html
+++ b/content/blog.html
@@ -205,9 +205,10 @@
 <footer>
     <hr>
     <ul>
-        <li><a href="https://www.linkedin.com/in/ethan-childerhose/">&#128101 LinkedIn</a></li>
+        <!-- <li><a href="https://www.linkedin.com/in/ethan-childerhose/">&#128101 LinkedIn</a></li> -->
+        <li><a href="https://www.linkedin.com/company/big-crete-engineering/">&#128101 LinkedIn</a></li>
         <li><a href="https://github.com/EthChil">&#128187 GitHub</a></li>
-        <li><a href="mailto:echilder@uwaterloo.ca">&#128236 echilder@uwaterloo.ca</a></li>
+        <li><a href="mailto:ethan@bigcrete.engineering">&#128236 ethan@bigcrete.engineering</a></li>
     </ul>
 </footer>
 
