--- a/content/about.html
+++ b/content/about.html
@@ -23,6 +23,7 @@
             <img class="team-member" src="Assets/headshots/alex.png">
             <img class="team-member" src="Assets/headshots/ivan.png">
             <img class="team-member" src="Assets/headshots/rug.png">
+            <img class="team-member" src="Assets/headshots/steven.png">
         </div>
         <p>Nice to meet you &#128522, our team has a wide background in engineering, please feel free to reach out with any questions.</p>
         <a class="link" href="mailto:info@bigcrete.engineering">Send an Email</a>
