Quartz sync: Jan 4, 2024, 8:56 AM

--- a/content/about.html
+++ b/content/about.html
@@ -26,6 +26,7 @@
             <img class="team-member" src="Assets/headshots/steven.png">
             <img class="team-member" src="Assets/headshots/henry.png">
             <img class="team-member" src="Assets/headshots/laszlo.png">
+            <img class="team-member" src="Assets/headshots/mehran.png">
         </div>
         <p>Nice to meet you &#128522, our team has a wide background in engineering, please feel free to reach out with any questions.</p>
         <a class="link" href="mailto:info@bigcrete.engineering">Send an Email</a>
