--- a/content/about.html
+++ b/content/about.html
@@ -15,26 +15,103 @@
 </div>
 
 <main>
-    <main>
-        <div style="margin-top: 16px;" class="team-members">
-            <img class="team-member" src="Assets/headshots/clayton.png">
-            <img class="team-member" src="Assets/headshots/ethan.png">
-            <img class="team-member" src="Assets/headshots/brian.png">
-            <img class="team-member" src="Assets/headshots/alex.png">
-            <img class="team-member" src="Assets/headshots/ivan.png">
-            <img class="team-member" src="Assets/headshots/rug.png">
-            <img class="team-member" src="Assets/headshots/steven.png">
-            <img class="team-member" src="Assets/headshots/henry.png">
-            <img class="team-member" src="Assets/headshots/laszlo.png">
-            <img class="team-member" src="Assets/headshots/mehran.png">
+    <div class="about-blurb">
+        <div class="about-sidebar">
+            <img src="Assets/Images/About/Headshot.png" class="dp">
+
+            <h2 class="sidebar">Skills</h2>
+            <hr class="small-hr">
+            <div class="skills">
+                <h6 class="skill-level">CAPABLE</h6><h6 class="skill-level">SKILLED</h6><h6 class="skill-level">ADVANCED</h6><h6 class="skill-level">EXPERT</h6>
+                <img src="Assets/Images/About/Expert.png" style="width: 100%;">
+                <h5 class="skill-name">FPGA Design</h5>
+                <img src="Assets/Images/About/Expert.png" style="width: 100%;">
+                <h5 class="skill-name">Prototyping / R&D</h5>
+                <img src="Assets/Images/About/Expert.png" style="width: 100%;">
+                <h5 class="skill-name">PCB Design</h5>
+                <img src="Assets/Images/About/Advanced.png" style="width: 100%;">
+                <h5 class="skill-name">Digital ASIC Design</h5>
+                <img src="Assets/Images/About/Advanced.png" style="width: 100%;">
+                <h5 class="skill-name">CAD / Mechanical     Design</h5>
+                <img src="Assets/Images/About/Skilled.png" style="width: 100%;">
+                <h5 class="skill-name">Analog IC Design</h5>
+                <img src="Assets/Images/About/Skilled.png" style="width: 100%;">
+                <h5 class="skill-name">Firmware</h5>
+                <img src="Assets/Images/About/Capable.png" style="width: 100%;">
+                <h5 class="skill-name">Web Dev</h5>
+            </div>
+
+            <h2 class="sidebar">Experience</h2>
+            <hr class="small-hr">
+            <div class="job">
+                <h3 class="company-name"><a href="https://neuralink.com/" target="_blank">Neuralink</a></h3>
+                <h6 class="job-title">ASIC Design Intern</h6>
+                <h6 class="job-date">Sept 2022 - Dec 2022</h6>
+                <p class="job-description">Neuralink is developing the future of BCIs pushing them to the mainstream. I took ownership on 2 main projects Emulation and AMS with some digital design on the side. For Emulation I built a system to allow us to emulate the upcoming S1 chip on an FPGA providing verificaiton for the digital design including core along with the tooling the firmware team needed to iterate quickly prior to tapeout. For AMS I built out the tooling and testbenches on both the digital and analog side required to validate S1. In addition to this I did RTL design for portions of the S1 digital design. </p>
+            </div>
+            <div class="job">
+                <h3 class="company-name"><a href="https://tesla.com/" target="_blank">Tesla</a></h3>
+                <h6 class="job-title">Hardware Design Intern</h6>
+                <h6 class="job-date">Jan 2022 - Apr 2022</h6>
+                <p class="job-description">At Tesla I was working on the body controls team which is responsible for PCBs which control a number of endpoints around the vehicle. During my time there I took on a mixture of developing boards for use in future vehicles, debugging problems as they arose on the fleet, and bringing up new boards.</p>
+            </div>
+            <div class="job">
+                <h3 class="company-name"><a href="https://nvidia.com/" target="_blank">Nvidia</a></h3>
+                <h6 class="job-title">ASIC Design Intern</h6>
+                <h6 class="job-date">May 2021 - Aug 2021</h6>
+                <p class="job-description">At Nvidia I worked on the memory subsystem for 3 seperate SOCs, Tegra Orin, Grace CPU, and one yet to be released SKU. I worked to modify clock gating and re-group signals to reduce power consumption and area.</p>
+            </div>
+            <div class="job">
+                <h3 class="company-name"><a href="https://www.canadensys.ca/" target="_blank">Canadensys</a></h3>
+                <h6 class="job-title">Hardware Engineering Intern</h6>
+                <h6 class="job-date">Sept 2022 - Dec 2022 & Jan 2022 - Apr 2022</h6>
+                <p class="job-description">Across my 8 months at Canadensys I worked on a wide array of projects. Initially I worked on their first set of NISA lunar cameras developing tooling required to speed up assembly and also documentation for how to assemble them. I designed and built vibration plates, clean room equipment, firmware loading automation, a custom ICT to validate the electronics, and personally assembled the first set sold to customers some of which are now on orbit. During my final 4 months I switched from NISA to working on their satellite avionic computers where I developed FPGA programs helped to bring up the first batch and develop similar assembly procedures.</p>
+            </div>
+            <div class="job">
+                <h3 class="company-name"><a href="https://rocketlabusa.com/" target="_blank">Rocketlab</a></h3>
+                <h6 class="job-title">Summer Intern</h6>
+                <h6 class="job-date">July 2019 - Aug 2019</h6>
+                <p class="job-description">At rocket lab (formerly Sinclair Interplanetary) I helped to do thermal testing on prototype flyback buck boost convertor circuits for use in future products. I also helped to write python which automated ESD testing on reaction wheels. </p>
+            </div>
+            <div class="job">
+                <h3 class="company-name"><a href="https://team1325.com/" target="_blank">Gastronomous</a></h3>
+                <h6 class="job-title">Mechatronics Engineer</h6>
+                <h6 class="job-date">Apr 2020 - Feb 2021</h6>
+                <p class="job-description">At Gastronomous I worked to develop renders and concepts for future automated kitchen designs and developed initial hardware designs for future products. <a href="https://www.youtube.com/watch?v=KUXX4vl6qAA&ab_channel=Gastronomous" target="_blank">demo of Gastros prototype</a>.</p>
+            </div>
+            <div class="job">
+                <h3 class="company-name"><a href="https://team1325.com/" target="_blank">Mag-Z</a></h3>
+                <h6 class="job-title">Mechatronics Engineer</h6>
+                <h6 class="job-date">Mar 2019 - Nov 2019</h6>
+                <p class="job-description">MAG-Z is a cinematography company using robotic arms to get new types of shots not previously available with traditional cinema technology. While there I worked to develop a motorized follow focus system from scratch using a brushless motor and rapidly prototyped mechanical enclosure controlled through a custom GUI built in Qt. </p>
+            </div>
+            <div class="job">
+                <h3 class="company-name"><a href="https://1360.ca/" target="_blank">1360 Orbit Robotics</a></h3>
+                <h6 class="job-title">Design & Software Lead</h6>
+                <h6 class="job-date">Oct 2016 - Mar 2019</h6>
+                <p class="job-description">1360 Orbit Robotics is a community FRC team during my time there I was a team lead helping to teach kids programming and mechanical design while also developing competitive robots that took the team to their first worlds competition ranking as high as first in the district of Ontario.</p>
+            </div>
+
+            <hr class="mobile-about-line">
         </div>
-        <p>Nice to meet you &#128522, our team has a wide background in engineering, please feel free to reach out with any questions.</p>
-        <a class="link" href="mailto:info@bigcrete.engineering">Send an Email</a>
-    </main>
-    <footer>
-        <p>Big Crete Engineering</p>
-        <p>made with &hearts; in canada</p>
-    </footer>
+        <div class="about-text">
+            <p class="text-box">My name is Ethan Childerhose,</p>
+            <p class="text-box">I am a 3rd year Mechatronics Engineering student at the University of Waterloo. I have a vast set of interests across engineering disciplines and like to keep myself busy. I just wrapped up my coop term at <a href="https://neuralink.com/">Neuralink</a> as an ASIC Design intern, working on a next generation chip for a future generation brain implant. Some topics that interest me deeply are chip design, electrical engineering, control theory, materials, and physics.</p>
+            <div class="text-box">
+                <img src="Assets/Images/About/Moores.png" class="right-picture forty-per"> PUT A PHOTO OF CHIP ME
+                <p>I love to learn both in the class and outside of it. I work on a variety of projects and this website acts as a place for me to show them off. For complete projects you can visit my <a href="main.html">projects</a> page and for projects I'm working go to the <a href="construction.html">construction site</a>. I am currently working on exploring the world of chip design a common theme is my fascination with the miniature the amount of engineering squeezed into the small space of many chips inspires me.</p>
+            </div>
+            <div class="text-box">
+<!--                <img src="../assets/Clay Working.JPG" class="left-picture">-->
+                <p>I love to work on things from first principles learning and developing the skills to build things myself. I find a deep appreciation in learning how the world around me works and using this knowledge to create cool things. I love fast paced environments where engineering is core to the work being done.</p>
+            </div>
+            <div class="image-box">
+                <img src="Assets/Images/About/Hiking.jpg" style="width:80%; height: auto;" class="center-picture">
+            </div>
+            <p class="text-box">Aside from engineering and projects, I love to get out and explore the world. I love to travel and see the outdoors, I try to seek out new experiences and do things outside of my comfort zone. As for sports I do right now I love hiking, skiing, swimming, and longboarding.</p>
+            <p class="text-box">If you want to know more about me I suggest you check out my <a href="blog.html">blog</a>, if you would like to chat feel free to add me on linkedin or send me an email, I'm always happy to chat.</p>
+        </div>
+    </div>
 </main>
 
 
