Quartz sync: Jan 18, 2024, 4:10 PM

--- a/content/about.html
+++ b/content/about.html
@@ -45,8 +45,8 @@
             <hr class="small-hr">
             <div class="job">
                 <h3 class="company-name"><a href="https://neuralink.com/" target="_blank">Neuralink</a></h3>
-                <h6 class="job-title">ASIC Design Intern</h6>
-                <h6 class="job-date">Sept 2022 - Dec 2022</h6>
+                <h6 class="job-title">Digital and Analog ASIC Design Intern</h6>
+                <h6 class="job-date">Sept 2022 - Dec 2022 & May 2023 - Sept 2023</h6>
                 <p class="job-description">Neuralink is developing the future of BCIs pushing them to the mainstream. I took ownership on 2 main projects Emulation and AMS with some digital design on the side. For Emulation I built a system to allow us to emulate the upcoming S1 chip on an FPGA providing verificaiton for the digital design including core along with the tooling the firmware team needed to iterate quickly prior to tapeout. For AMS I built out the tooling and testbenches on both the digital and analog side required to validate S1. In addition to this I did RTL design for portions of the S1 digital design. </p>
             </div>
             <div class="job">
@@ -96,7 +96,7 @@
         </div>
         <div class="about-text">
             <p class="text-box">My name is Ethan Childerhose,</p>
-            <p class="text-box">I am a 3rd year Mechatronics Engineering student at the University of Waterloo. I have a vast set of interests across engineering disciplines and like to keep myself busy. I just wrapped up my coop term at <a href="https://neuralink.com/">Neuralink</a> as an ASIC Design intern, working on a next generation chip for a future generation brain implant. Some topics that interest me deeply are chip design, electrical engineering, control theory, materials, and physics.</p>
+            <p class="text-box">I am a 4th year Mechatronics Engineering student at the University of Waterloo. I have a vast set of interests across engineering disciplines and like to keep myself busy. I just wrapped up my coop term at <a href="https://neuralink.com/">Neuralink</a> as an ASIC Design intern, working on a next generation chip for a future generation brain implant. Some topics that interest me deeply are chip design, electrical engineering, control theory, materials, and physics.</p>
             <div class="text-box">
                 <img src="Assets/Images/About/Moores.png" class="right-picture forty-per"> PUT A PHOTO OF CHIP ME
                 <p>I love to learn both in the class and outside of it. I work on a variety of projects and this website acts as a place for me to show them off. For complete projects you can visit my <a href="main.html">projects</a> page and for projects I'm working go to the <a href="construction.html">construction site</a>. I am currently working on exploring the world of chip design a common theme is my fascination with the miniature the amount of engineering squeezed into the small space of many chips inspires me.</p>
